# freeswitch

./: configure.ac
src/mod/applications/mod_event_websocket/: Makefile.am  event_gate_webocket.cpp  example.c  example2.c  example_client_tcp.c  example_websocket.c  mod_event_websocket.c  multiple_client.c
src/mod/event_handlers/mod_event_socket/: mod_event_socket.c
